src/components/layout/layout.module.css
.layout {
  --container-width: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100vw;
  min-height: 100vh;
}

.container {
  /* Adjust the media query along with the width! */
  width: 800px;
  max-width: 100%;
  display: flex;
  flex-direction: column;
  padding: 0 1em 0.5em;
  flex-grow: 1;
}

.hero {
  display: flex;
  flex-direction: column;
  margin: 0 -1em;
}

.hero img {
  height: auto;
  max-width: 100%;
}

@media (min-width: 400px) {
  .hero {
    margin-left: 0;
    margin-right: 0;
  }
}

.main {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  margin-bottom: 2rem;
}

.hard-wraps {
  white-space: pre;
}

